// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic 1 1`] = `
"register("worldLoad", (its) => {
  exampleWorldLoad()

  exampleWorldLoad2()
})

register("quit", (its) => {
  sendLeave()
})
"
`;

exports[`basic 2 1`] = `
"register("click", (its) => {
  myJavascriptFunction()
})
"
`;

exports[`basic 3 1`] = `
"register("click", (its) => {
  prompt("age fn?")

  it()
})
"
`;

exports[`basic 4 1`] = `
"ChatLib.chat("Hello")

ChatLib.chat("World!")
"
`;

exports[`basic 5 1`] = `
";(() => {
  ChatLib.chat("hello")
  ;(() => {
    ChatLib.chat("world")
    ChatLib.chat("!")
  })()
})()
"
`;

exports[`basic 6 1`] = `
"register("click", (its) => {
  ;(() => {
    ChatLib.chat("hello")
    ChatLib.chat("world")
  })()
})
"
`;

exports[`basic 7 1`] = `
"register("click", (its) => {
  ;(() => {
    helloWorld()
    ChatLib.chat(result)
  })()
})
"
`;

exports[`basic 8 1`] = `
"x = "5"
"
`;

exports[`basic 9 1`] = `
"x = apple
"
`;

exports[`basic 9 2`] = `
"x = 45
"
`;

exports[`basic 10 1`] = `
"x = { name: "Joe", age: 35 }
"
`;

exports[`basic 11 1`] = `
"register("keyup", (its) => {
  ChatLib.chat(it.x)
})
"
`;

exports[`basic 11 2`] = `
";(() => {
  y = (x) => x
  y(5)
})()
"
`;

exports[`basic 12 1`] = `
"y = () => true
"
`;

exports[`basic 13 1`] = `
";(() => {
  y = { a: (x) => x }
  y.a("a")
})()
"
`;

exports[`basic 14 1`] = `
"x = 10

y = 20

sumOfSquares = x * x + y * y
"
`;
